--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "trial",
+  "name": "sveltekit-wordpress",
   "version": "0.0.1",
   "scripts": {
     "dev": "svelte-kit dev",
@@ -10,16 +10,7 @@
   "devDependencies": {
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
-    "autoprefixer": "^10.3.7",
-    "cssnano": "^5.0.8",
-    "postcss": "^8.3.9",
-    "postcss-load-config": "^3.1.0",
-    "svelte": "^3.44.0",
-    "svelte-preprocess": "^4.9.8"
+    "svelte": "^3.44.0"
   },
-  "type": "module",
-  "dependencies": {
-    "open-props": "^1.0.13",
-    "postcss-jit-props": "^1.0.4"
-  }
+  "type": "module"
 }
